<resources>
    <string name="app_name">TestProjectWithDasha</string>
    <string name="login_link">http://10.0.2.2:8000/sign_in/</string>
    <string name="reg_link">http://10.0.2.2:8000/registration/</string>
    <string name="getGroupsByUser_link">http://10.0.2.2:8000/getGroupsByUser/</string>
    <string name="post_request">POST</string>
    <string name="get_request">GET</string>
    <string name="reset_password_link">http://10.0.2.2:8000/actions_with_password/reset/</string>
    <string name="change_password_link">http://10.0.2.2:8000/actions_with_password/change/</string>
    <string name="get_news">http://10.0.2.2:8000/news_module/</string>
    <string name="verification_link">http://10.0.2.2:8000/verification/</string>
    <string name="openNewsItemBtnTitle">П о с м о т р е т ь</string>
    <string name="filter_filler">Ф и л ь т р</string>
    <string name="filter_apply_button">ПРИМЕНИТЬ</string>


    <string-array name="menu_button_verificated">
        <item>Личный кабинет</item>
        <item>Объявления</item>
        <item>Деканат</item>
        <item>Домашние задания</item>
        <item>Посещаемость</item>
        <item>Настройки</item>
    </string-array>

    <string-array name="menu_button">
        <item>Верификация</item>
        <item>Настройки</item>
    </string-array>

    <string-array name="settings_menu">
        <item>Сменить пароль</item>
        <item>О приложении</item>
        <item>Выход</item>
    </string-array>

    <string name="about_app">О ПРИЛОЖЕНИИ</string>
    <string name="logo_description">Лого как лого, чего бухтеть-то</string>

    <string name="our_text_about_app">Тут будет текст, который мы придумаем и напишем и он будет
        красиво оформлен по середине, потому что мы можем себе такое позволить</string>

    <string name="forgot_password">Забыли пароль ?</string>
    <string name="authorization">Авторизация</string>
    <string name="show_password">Показать пароль</string>
    <string name="password">Пароль</string>
    <string name="email">Почта</string>
    <string name="registration">Регистрация</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="login">Войти</string>
    <string name="first_registration">Зарегистрироваться</string>

    <string name="next_or_menu">Д а л е е</string>

    <string name="go_back">Назад</string>
    <string name="input_email">Введите почту для восстановления пароля</string>
    <string name="fix_the_pass">Восстановить пароль</string>
    <string name="exit">Выход</string>
    <string name="verificated">Поздравляем с успешной верификацией. Теперь Добби свободен и разрешил
     вам пользоватся всеми функциями нашего приложения</string>
    <string name="tag">Tag</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="pubdate">pubDate</string>
    <string name="group">Group</string>
    <string name="menu_txt">Menu_txt</string>
    <string name="last_4_numbers">Последние 4 цифры паспорта</string>
    <string name="ver_day">День</string>
    <string name="ver_year">Год</string>
    <string name="ver_month">Месяц</string>
    <string name="middle_name">Отчество</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="accept">Подтвердить</string>


    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lines_5_text">ausdhsau dausdhasudh suadasdhausdhsau dausdhasudh suadasdhausdhsau dausdhasudh suadasdhausdhsau dausdhasudh suadasdhausdhsau dausdhasudh suadasdhausdhsau dausdhasudh suadasdhausdhsau dausdhasudh suadasdhausdhsau dausdhasudh suadasdh</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="spinner_item">Spinner_item</string>


    <string-array name="months">
        <item>Месяц</item>
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>


</resources>