<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <EditText
        android:id="@+id/e_mail_reg"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.209" />

    <EditText
        android:id="@+id/password_reg"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/e_mail_reg"
        app:layout_constraintStart_toStartOf="@+id/e_mail_reg"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_reg" />

    <EditText
        android:id="@+id/repeat_password_reg"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="172dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/repeat_pass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_reg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_reg"
        app:layout_constraintTop_toBottomOf="@+id/password_reg"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/registration"
        android:layout_width="186dp"
        android:layout_height="37dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/buttons_field"
        android:text="@string/first_registration"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/repeat_password_reg"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password_reg" />

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="77dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons_field"
        android:scaleX="1"
        android:text="@string/login"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@+id/registration"
        app:layout_constraintTop_toBottomOf="@+id/registration" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textColor="@color/text_color"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

</androidx.constraintlayout.widget.ConstraintLayout>