<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clVerifMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity"
    android:background="@color/background">

    <EditText
        android:id="@+id/etPassportVerif"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/last_4_numbers"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/etYearVerif"
        app:layout_constraintStart_toStartOf="@+id/etDayVerif"
        app:layout_constraintTop_toBottomOf="@+id/etMonthVerif"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etDayVerif"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ver_day"
        android:inputType="date"
        android:maxLength="2"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintStart_toStartOf="@+id/etBatyaNameVerif"
        app:layout_constraintTop_toBottomOf="@+id/etBatyaNameVerif"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etYearVerif"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ver_year"
        android:inputType="date"
        android:maxLength="4"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/etBatyaNameVerif"
        app:layout_constraintTop_toBottomOf="@+id/etBatyaNameVerif"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etMonthVerif"
        android:layout_width="85dp"
        android:layout_height="45dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ver_month"
        android:inputType="date"
        android:maxLength="2"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toStartOf="@+id/etYearVerif"
        app:layout_constraintStart_toEndOf="@+id/etDayVerif"
        app:layout_constraintTop_toBottomOf="@+id/etBatyaNameVerif"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etBatyaNameVerif"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/middle_name"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/etNameVerif"
        app:layout_constraintStart_toStartOf="@+id/etNameVerif"
        app:layout_constraintTop_toBottomOf="@+id/etNameVerif"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etNameVerif"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/etSurnameVerif"
        app:layout_constraintStart_toStartOf="@+id/etEmailVerif"
        app:layout_constraintTop_toBottomOf="@+id/etSurnameVerif"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmailVerif"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etSurnameVerif"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/etEmailVerif"
        app:layout_constraintStart_toStartOf="@+id/etEmailVerif"
        app:layout_constraintTop_toBottomOf="@+id/etEmailVerif"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnVerif"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/buttons_field"
        android:paddingLeft="15sp"
        android:paddingRight="15sp"
        android:text="@string/accept"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/etPassportVerif"
        app:layout_constraintStart_toStartOf="@+id/etPassportVerif"
        app:layout_constraintTop_toBottomOf="@+id/etPassportVerif" />

</androidx.constraintlayout.widget.ConstraintLayout>